--- a/index.html
+++ b/index.html
@@ -4,110 +4,88 @@
     <meta charset="UTF-8">
     <title>SantaTour</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script src="scripts.js" ></script>
-    <link rel="stylesheet" href="styles.css"/>
+    <script src="js/scripts.js" ></script>
+    <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
-<span id='title'>Light Decoration</span>
+<H3 id='title'>Light Decoration</H3>
 <div id="container">
 
-    <span>
-        Because your neighbors keep defeating you in the holiday house decorating contest year after year, you've decided to deploy one million lights in a 1000x1000 grid.
-
-Furthermore, because you've been especially nice this year, Santa has mailed you instructions on how to display the ideal lighting configuration.
-
-Lights in your grid are numbered from 0 to 999 in each direction; the lights at each corner are at 0,0, 0,999, 999,999, and 999,0. The instructions include whether to turn on, turn off, or toggle various inclusive ranges given as coordinate pairs. Each coordinate pair represents opposite corners of a rectangle, inclusive; a coordinate pair like 0,0 through 2,2 therefore refers to 9 lights in a 3x3 square. The lights all start turned off.
-
-To defeat your neighbors this year, all you have to do is set up your lights by doing the instructions Santa sent you in order.
-
-For example:
-
-turn on 0,0 through 999,999 would turn on (or leave on) every light.
-toggle 0,0 through 999,0 would toggle the first line of 1000 lights, turning off the ones that were on, and turning on the ones that were off.
-turn off 499,499 through 500,500 would turn off (or leave off) the middle four lights.
-
-With the following instructions, how many lights are lit?    </span>
 
     <div class='input' >
-        <form>
-            <textarea name='distances'  required rows="30">
-toggle 461,550 through 564,900
-turn off 370,39 through 425,839
-turn off 464,858 through 833,915
-turn off 812,389 through 865,874
-turn on 599,989 through 806,993
-turn on 376,415 through 768,548
-turn on 606,361 through 892,600</textarea>
+        <form  method="post">
+            <textarea name='distances' rows="30" required>
+turn on 0,0 through 999,999
+turn off 450,450 through 550,550
+toggle 480,480 through 520,520</textarea>
+            <input id='process' value="Process" />
         </form>
-
-        <button id='process'>Process</button>
     </div>
 
-    <table>
+    <div id="resultPanel" hidden>
+        <span id="results"></span><br>
+        <canvas id="myCanvas" width="1000" height="1000" style="border:1px solid #d3d3d3;">
+            Your browser does not support the HTML5 canvas tag.</canvas>
 
-    </table>
-    <span id="results"></span>
-    <canvas id="myCanvas" width="1000" height="1000" style="border:1px solid #d3d3d3;">
-        Your browser does not support the HTML5 canvas tag.</canvas>
-
+    </div>
+    <div id="loaderDiv" hidden><img id="loader-img" alt="" src="images/01-progress.gif"  align="center" /></div>
     <script>
+        var _DIMENSION = 1000;
+        // init global counter
         var nbLit = 0;
-        // init lights matrix
-        var lightArrays = matrix(1000,1000,0);
-
-        var c = document.getElementById("myCanvas");
-        var ctx = c.getContext("2d");
+        // init global lights matrix
+        var lightArrays = matrix(_DIMENSION, _DIMENSION,0);
+        // get 2d context
+        var ctx = document.getElementById("myCanvas").getContext("2d");
 
         $("#process").click(function() {
-			nbLit = 0;
-			lightArrays = matrix(1000,1000,0);
+            // Adding loading GIF
+            $('#loaderDiv').show();
+            $("#resultPanel").hide();
+            $(window).scrollTop($('#loaderDiv').offset().top);
+
+            nbLit = 0;
+			lightArrays = matrix(_DIMENSION, _DIMENSION,0);
             var instructionsArray = parseInstructions($("[name=distances]").val());
-            executeInstructions(instructionsArray);
-			$("#results").html("<br><b>Nb lit: " + nbLit + "</b>");
+            if (instructionsArray.length > 0) {
+                executeInstructions(instructionsArray);
 
-            for (x = 0; x < lightArrays.length; x++) {
-                for (y = 0; y < lightArrays.length ; y++) {
-
-
-                    if (parseInt(lightArrays[x][y]) === 0) {
-                        ctx.fillStyle = "rgb(200,0,0)";
-                        //ctx.fillRect(x, y, 1, 1);
-
-                    }else{
-                        ctx.fillStyle = "rgb(0,0,200)";
-                        //ctx.fillRect(x, y, 1, 1);
-
-
+                $("#results").html("<br><b>Number of lights lit: " + nbLit + "</b>");
+                for (var x = 0; x < lightArrays.length; x++) {
+                    for (var y = 0; y < lightArrays.length; y++) {
+                        ctx.fillStyle = (parseInt(lightArrays[x][y]) == 0) ? "gainsboro" : "rgb(200,0,0)";
+                        ctx.fillRect(x, _DIMENSION - y, 1, 1);
                     }
-                    ctx.fillText(lightArrays[x][y],x,y);
-
                 }
-
-
-
+                // display result
+                $('#loaderDiv').hide();
+                $("#resultPanel").show();
+                $(window).scrollTop($('#resultPanel').offset().top);
+            }else{
+                $('#loaderDiv').hide();
+                $("#resultPanel").hide();
             }
         });
-		
-		function matrix( rows, cols, defaultValue){
 
-		  var arr = [];
+        /**
+         * init matrix with 1000*1000 size
+         * @param rows
+         * @param cols
+         * @param defaultValue
+         * @returns {Array}
+         */
+		function matrix(rows, cols, defaultValue){
+            var arr = [];
+            // Creates all lines:
+                for(var i=0; i < rows; i++){
+                    arr.push([]);
+                    arr[i].push( new Array(cols));
 
-		  // Creates all lines:
-		  for(var i=0; i < rows; i++){
-
-			  // Creates an empty line
-			  arr.push([]);
-
-			  // Adds cols to the empty line:
-			  arr[i].push( new Array(cols));
-
-			  for(var j=0; j < cols; j++){
-				// Initializes:
-				arr[i][j] = defaultValue;
-			  }
-		  }
-
-		return arr;
+                    for(var j=0; j < cols; j++){
+                        arr[i][j] = defaultValue;
+                    }
+                }
+		    return arr;
 		};
 
     </script>
